# mltrack

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
mlflow/: Dockerfile  entrypoint.sh
requirements/: base.txt  dev.txt  mlflow.txt  streamlit.txt
src/mltrack/: __init__.py  config.py  loaders.py  logger.py  main.py  models.py  pipelines.py  storage.py  train.py
streamlit/: Dockerfile  app.py  data.py
tests/: test_imports.py
