[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mltrack"
version = "0.1.0"
description = "Local-first MLOps stack for model metrics comparison"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow==3.7.0",
    "boto3==1.42.8",
    "python-dotenv==1.2.1",
    "scikit-learn==1.7.2",
    "pandas==2.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mltrack"]

[project.optional-dependencies]
dev = [
    "ruff==0.14.9",
    "pytest==9.0.2",
]
streamlit = [
    "streamlit==1.29.0",
    "plotly==5.18.0",
]
server = [
    "psycopg2-binary==2.9.10",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N803", "N806"]  # Allow sklearn convention for X, y variable names

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
